# ArcBot

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml  workspace.toml
.github/workflows/: run_tests.yml
bases/arcbot/: __init__.py
bases/arcbot/bot_client/: __init__.py  core.py
bases/arcbot/db_api/: __init__.py  core.py
bases/arcbot/messenger_api/: __init__.py  core.py
components/arcbot/audio_fetcher/: __init__.py  core.py
components/arcbot/bot_action/: __init__.py  core.py
components/arcbot/command/: core.py
components/arcbot/command_parser/: __init__.py  core.py
components/arcbot/discord_model/: __init__.py
components/arcbot/entity/: __init__.py  core.py
components/arcbot/log/: __init__.py  core.py
components/arcbot/messenger/: __init__.py  core.py
components/arcbot/messenger_remote/: __init__.py  core.py
components/arcbot/notification_manager/: __init__.py  core.py
components/arcbot/poll_manager/: __init__.py  core.py
components/arcbot/repository/: __init__.py  core.py
components/arcbot/repository_remote/: __init__.py  core.py
components/arcbot/strings/: __init__.py  core.py
development/: bot.py  locu.py  locu_flask.py  messenger_api.py
development/bases/bot_client/: core.py
development/bases/db_api/: core.py
development/bases/messenger_api/: core.py
development/components/audio_fetcher/: core.py
development/components/bot_action/: core.py
development/components/command/: core.py
development/components/command_parser/: core.py
development/components/discord_model/: core.py
development/components/entity/: core.py
development/components/messenger/: core.py
development/components/messenger_remote/: core.py
development/components/notification_manager/: core.py
development/components/poll_manager/: core.py
development/components/queue_manager/: core.py
development/components/repository/: core.py
development/components/repository_remote/: core.py
development/components/strings/: core.py
projects/: README.md  bot-remote-deployment.yaml  db-service-deployment.yaml  db-service-service.yaml  docker-compose.yml  messaging-service-deployment.yaml  messaging-service-service.yaml
projects/.prepare_bot/: .env.sample  docker-compose.yml  kubernetes.yaml  main.py
projects/.prepare_bot/arcbot/bot_action/: __init__.py  core.py
projects/.prepare_bot/arcbot/bot_client/: __init__.py
projects/.prepare_bot/arcbot/command/: __init__.py
projects/.prepare_bot/arcbot/command_parser/: __init__.py  core.py
projects/.prepare_bot/arcbot/poll_manager/: core.py
projects/.prepare_bot/arcbot/queue_manager/: __init__.py  core.py
projects/.prepare_bot/arcbot/strings/: core.py
projects/bot/: Dockerfile  README.md  arcbot-data-persistentvolumeclaim.yaml  docker-compose.yml  postgres-deployment.yaml  pyproject.toml
projects/bot_remote/: .env.sample  README.md  pyproject.toml
projects/db_service/: .env.sample  README.md  main.py  pyproject.toml
projects/messaging_service/: .env.sample  README.md  main.py  pyproject.toml
test/bases/arcbot/bot_client/: test_core.py
test/bases/arcbot/db_api/: test_core.py
test/bases/arcbot/messenger_api/: test_core.py
test/components/arcbot/audio_fetcher/: test_core.py
test/components/arcbot/bot_action/: test_core.py
test/components/arcbot/command/: test_core.py
test/components/arcbot/command_parser/: test_core.py
test/components/arcbot/discord_model/: test_core.py
test/components/arcbot/messenger/: test_core.py
test/components/arcbot/messenger_remote/: test_core.py
test/components/arcbot/notification-manager/: test_core.py
test/components/arcbot/notification_manager/: test_core.py
test/components/arcbot/persistence/: test_core.py
test/components/arcbot/poll_manager/: test_core.py
test/components/arcbot/queue_manager/: test_core.py
test/components/arcbot/repository/: test_core.py
test/components/arcbot/repository_remote/: test_core.py
test/components/arcbot/strings/: test_core.py
