[tool.poetry]
name = "arcbot"
version = "0.1.0"
description = ""
authors = ["TomasBruno1 <tomas.bruno@ing.austral.edu.ar>, tomasberretta <tomas.berretta@ing.austral.edu.ar>"]
readme = "README.md"
packages = [
    { include = "arcbot/bot_client", from = "bases" },
]

[tool.poetry.dependencies]
python = "^3.10"
poetry-multiproject-plugin = "^1.2.1"
poetry-polylith-plugin = "^1.6.1"
python-dotenv = "^1.0.0"
pynacl = "^1.5.0"
discord-py = "2.2.2"
dpytest = "^0.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
