[tool.poetry]
name = "arcbot"
version = "0.1.0"
description = ""
authors = ["TomasBruno1 <tomas.bruno@ing.austral.edu.ar>, tomasberretta <tomas.berretta@ing.austral.edu.ar>"]
readme = "README.md"
packages = [
    { include = "arcbot/bot_client", from = "bases" },
    { include = "arcbot/db_api", from = "bases" },
    { include = "arcbot/messenger_api", from = "bases" },
    { include = "arcbot/command_parser", from = "components" },
    { include = "arcbot/bot_action", from = "components" },
    { include = "arcbot/audio_fetcher", from = "components" },
    { include = "arcbot/log", from = "components" },
    { include = "arcbot/command", from = "components" },
    { include = "arcbot/queue_manager", from = "components" },
    { include = "arcbot/strings", from = "components" },
    { include = "arcbot/entity", from = "components" },
    { include = "arcbot/repository", from = "components" },
    { include = "arcbot/poll_manager", from = "components" },
    { include = "arcbot/notification_manager", from = "components" },
    { include = "arcbot/messenger", from = "components" },
    { include = "arcbot/discord_model", from = "components" },
    {include = "arcbot/messenger_remote",from = "components"},
    {include = "arcbot/repository_remote",from = "components"},
]

[tool.poetry.dependencies]
python = "^3.10"
poetry-multiproject-plugin = "^1.2.1"
poetry-polylith-plugin = "^1.6.1"
python-dotenv = "^1.0.0"
pynacl = "^1.5.0"
discord-py = "2.2.2"
dpytest = "^0.6.5"
yt-dlp = "2023.7.6"
pony = "^0.7.17"
psycopg2-binary = "^2.9.8"
schedule = "^1.2.1"
requests = "^2.31.0"
flask = { extras = ["async"], version = "^3.0.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
