[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ['TomasBruno1 <tomas.bruno@ing.austral.edu.ar>, tomasberretta <tomas.berretta@ing.austral.edu.ar>']
license = ""

packages = [
    {include = "arcbot/bot_client", from = "../../bases"},
]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.2.3"
python-dotenv = "^1.0.0"
pynacl = "^1.5.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
